--- a/Basis/Text_Preprocess_PyTorch.ipynb
+++ b/Basis/Text_Preprocess_PyTorch.ipynb
@@ -72,7 +72,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[20, 12, 24, 19, 16, 17, 24, 10, 14, 25, 26, 6, 5, 1, 12, 7, 27, 26, 2, 14, 3, 8, 22, 9, 21, 23, 28, 0, 15, 14, 13, 21, 14, 18, 11, 26, 4]\n"
+      "[15, 5, 26, 9, 3, 1, 26, 24, 8, 14, 13, 4, 22, 19, 5, 10, 11, 13, 17, 8, 12, 0, 16, 21, 2, 18, 27, 23, 6, 8, 7, 2, 8, 28, 25, 13, 20]\n"
      ]
     }
    ],
@@ -93,10 +93,10 @@
       "text/plain": [
        "array([[0., 0., 0., ..., 0., 0., 0.],\n",
        "       [0., 0., 0., ..., 0., 0., 0.],\n",
-       "       [0., 0., 0., ..., 0., 0., 0.],\n",
+       "       [0., 0., 0., ..., 1., 0., 0.],\n",
        "       ...,\n",
        "       [0., 0., 0., ..., 0., 0., 0.],\n",
-       "       [0., 0., 0., ..., 1., 0., 0.],\n",
+       "       [0., 0., 0., ..., 0., 0., 0.],\n",
        "       [0., 0., 0., ..., 0., 0., 0.]])"
       ]
      },
@@ -650,6 +650,27 @@
   {
    "cell_type": "code",
    "execution_count": 14,
+   "id": "53fec8f0-f06e-4e5c-87ca-d7280920b0f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'<unk>'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vocab.lookup_token(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "id": "1fdd0c44-8058-4cee-a31f-1cd5fc4cabff",
    "metadata": {},
    "outputs": [
@@ -975,7 +996,7 @@
        " 3]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1006,7 +1027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "1bd52589-9700-42b3-a816-0fdf9cf25db5",
    "metadata": {},
    "outputs": [],
@@ -1029,30 +1050,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "489fbf14-df06-4356-9584-675e24da9a9c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(tensor([1, 1, 1, 1, 0, 1, 1, 0, 0, 0, 0, 0, 1, 1, 1, 0, 0, 0, 1, 0, 1, 0, 1, 0,\n",
-       "         1, 1, 1, 0, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1]),\n",
-       " tensor([  18,   10, 4800,  ...,    5,  121,    3]),\n",
-       " tensor([    0,   344,   485,  1557,  1717,  1930,  2318,  2473,  2796,  2937,\n",
-       "          3224,  4102,  4259,  4360,  4573,  4667,  4852,  5190,  5367,  5666,\n",
-       "          6377,  6524,  7138,  7761,  8493,  8714,  8876,  8912,  9075,  9200,\n",
-       "          9316,  9698,  9889, 10013, 10150, 10380, 10868, 11207, 11526, 11678]))"
+       "(tensor([1, 1, 1, 1, 1, 0, 0, 1, 0, 1, 0, 1, 0, 1, 1, 1, 0, 1, 0, 0, 1, 0, 0, 0,\n",
+       "         0, 1, 0, 0, 1, 1, 0, 0, 0, 1, 1, 1, 1, 1, 0, 1]),\n",
+       " tensor([ 54,  58,  13,  ..., 130, 375,  36]),\n",
+       " tensor([   0,   55,  187,  324,  649,  847, 1024, 1375, 1614, 1832, 1971, 2062,\n",
+       "         2477, 2628, 2777, 3546, 3647, 3756, 4341, 4600, 4742, 4830, 5118, 5438,\n",
+       "         5891, 6034, 6408, 6757, 6853, 7003, 7149, 7307, 7782, 7990, 8370, 8641,\n",
+       "         8907, 9219, 9454, 9760]))"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "for tt in test_dl:\n",
-    "    pass\n",
+    "    break\n",
     "\n",
     "tt"
    ]
@@ -1080,7 +1101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "568a6427-af9d-4ab4-ab77-20c9a8fe03ef",
    "metadata": {},
    "outputs": [
@@ -1093,7 +1114,7 @@
        ")"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1114,7 +1135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "2090d471-36c5-43a8-949d-ef168f2f324b",
    "metadata": {},
    "outputs": [],
@@ -1126,7 +1147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "7de58ab8-05f4-470e-8ccf-d0c37b1ee88d",
    "metadata": {},
    "outputs": [],
@@ -1149,7 +1170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "b59ccb3a-e3ae-43ba-82d1-6b304f35ccf3",
    "metadata": {},
    "outputs": [
@@ -1157,21 +1178,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1----Train Loss:: 0.671886\n",
-      "Epoch 2----Train Loss:: 0.645713\n",
-      "Epoch 3----Train Loss:: 0.630217\n",
-      "Epoch 4----Train Loss:: 0.618541\n",
-      "Epoch 5----Train Loss:: 0.609449\n",
-      "Epoch 6----Train Loss:: 0.601401\n",
-      "Epoch 7----Train Loss:: 0.594530\n",
-      "Epoch 8----Train Loss:: 0.588575\n",
-      "Epoch 9----Train Loss:: 0.582892\n",
-      "Epoch 10----Train Loss:: 0.577750\n"
+      "Epoch 1----Train Loss:: 0.671937\n",
+      "Epoch 2----Train Loss:: 0.646893\n"
      ]
     }
    ],
    "source": [
-    "epochs = 10\n",
+    "epochs = 2\n",
     "for t in range(epochs):\n",
     "    avgTrainingLoss = train(test_dl, model, loss_fn, optimizer)\n",
     "    print(f'Epoch {t+1}----Train Loss:: {avgTrainingLoss:>7f}') "
