--- a/1.VAE_PyTorch.ipynb
+++ b/1.VAE_PyTorch.ipynb
@@ -134,13 +134,10 @@
     "                   |  |  |  |  |\n",
     "                   |  |     |  |  \n",
     "                   |           |\n",
-    "                    mu,logvar\n",
+    "                    mu,logvar（Reparameterization：Encoder输出hidden var服从分布的参数）\n",
     "```\n",
     "\n",
-    "即：hidden layer中某一层的参数是由随机分布 N(mu,sigma) 生成的\n",
-    "\n",
-    "\n",
-    "\n"
+    "即：hidden layer中某一层的参数是由随机分布 N(mu,sigma) 生成的"
    ]
   },
   {
@@ -259,9 +256,7 @@
    "source": [
     "## VAE用途\n",
     "\n",
-    "1. 去噪\n",
-    "2. 降维\n",
-    "3. 生成图像"
+    "去噪/降维/预训练decoder"
    ]
   },
   {
