--- a/3.cGAN_TF.ipynb
+++ b/3.cGAN_TF.ipynb
@@ -104,8 +104,34 @@
     "                                            Real_Img |\n",
     "```\n",
     "\n",
+    "启发：pix2pix GAN 图像风格迁徙（e.g.给灰图上色，给轮廓图加细节）\n",
+    "```\n",
+    "Raw_Img ==> Generator ==> Fake_Colored_Img |\n",
+    "                                           | ==> Discriminator ==> 0/1\n",
+    "                          Real_Colored_Img |\n",
     "\n",
-    "启发了pix2pix GAN、Cycle GAN\n"
+    "\n",
+    "         Generator Loss = Binary(1,desc_Fake) + L1_Loss(Real,Fake)    保证二者之间的相似度\n",
+    "     Discriminator Loss = Binary(1,Real_Fake) + Binary(0,desc_Fake) \n",
+    "\n",
+    "Generator 使用Unet保证留存轮廓\n",
+    "Raw_Img、Real_Colored_Img 需要严格的成对数据\n",
+    "```\n",
+    "\n",
+    "\n",
+    "启发：Cycle GAN 将X空间的图像风格迁徙至Y空间的图像中\n",
+    "```\n",
+    "                               ——————————>GeneratorB——————>Fake_X_Img\n",
+    "                              |\n",
+    "X_Img ==> GeneratorA ==> Fake_Y_Img |\n",
+    "                                    | ==> Discriminator ==> 0/1 \n",
+    "                              Y_Img |\n",
+    "\n",
+    "         Generator Loss = Binary(1,desc_Fake) + L2_Loss(Fake_X_Img,X_Img)  为了防止Generator生成无关的图片\n",
+    "     Discriminator Loss = Binary(1,Real_Fake) + Binary(0,desc_Fake)\n",
+    "\n",
+    "不需要严格的成对数据，只需要标记图片属于X空间还是Y空间\n",
+    "```"
    ]
   },
   {
