fix gpu to device

--- a/Basis/Text_Preprocess_PyTorch.ipynb
+++ b/Basis/Text_Preprocess_PyTorch.ipynb
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using cpu device\n"
+      "Using cuda:0 device\n"
      ]
     }
    ],
@@ -20,7 +20,7 @@
     "import string\n",
     "\n",
     "device = (\n",
-    "    \"cuda\"\n",
+    "    \"cuda:0\"\n",
     "    if torch.cuda.is_available()\n",
     "    else \"mps\"\n",
     "    if torch.backends.mps.is_available()\n",
@@ -72,7 +72,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[15, 5, 26, 9, 3, 1, 26, 24, 8, 14, 13, 4, 22, 19, 5, 10, 11, 13, 17, 8, 12, 0, 16, 21, 2, 18, 27, 23, 6, 8, 7, 2, 8, 28, 25, 13, 20]\n"
+      "[9, 21, 0, 1, 13, 17, 0, 11, 20, 6, 10, 15, 8, 2, 21, 16, 27, 10, 14, 20, 23, 25, 26, 19, 7, 22, 3, 12, 4, 20, 18, 7, 20, 28, 5, 10, 24]\n"
      ]
     }
    ],
@@ -93,7 +93,7 @@
       "text/plain": [
        "array([[0., 0., 0., ..., 0., 0., 0.],\n",
        "       [0., 0., 0., ..., 0., 0., 0.],\n",
-       "       [0., 0., 0., ..., 1., 0., 0.],\n",
+       "       [1., 0., 0., ..., 0., 0., 0.],\n",
        "       ...,\n",
        "       [0., 0., 0., ..., 0., 0., 0.],\n",
        "       [0., 0., 0., ..., 0., 0., 0.],\n",
@@ -172,7 +172,7 @@
     {
      "data": {
       "text/plain": [
-       "'0.16.2+cpu'"
+       "'0.17.0+cpu'"
       ]
      },
      "execution_count": 6,
@@ -1057,13 +1057,17 @@
     {
      "data": {
       "text/plain": [
-       "(tensor([1, 1, 1, 1, 1, 0, 0, 1, 0, 1, 0, 1, 0, 1, 1, 1, 0, 1, 0, 0, 1, 0, 0, 0,\n",
-       "         0, 1, 0, 0, 1, 1, 0, 0, 0, 1, 1, 1, 1, 1, 0, 1]),\n",
-       " tensor([ 54,  58,  13,  ..., 130, 375,  36]),\n",
-       " tensor([   0,   55,  187,  324,  649,  847, 1024, 1375, 1614, 1832, 1971, 2062,\n",
-       "         2477, 2628, 2777, 3546, 3647, 3756, 4341, 4600, 4742, 4830, 5118, 5438,\n",
-       "         5891, 6034, 6408, 6757, 6853, 7003, 7149, 7307, 7782, 7990, 8370, 8641,\n",
-       "         8907, 9219, 9454, 9760]))"
+       "(tensor([0, 1, 0, 1, 1, 1, 0, 0, 1, 0, 1, 1, 1, 1, 0, 1, 1, 1, 0, 0, 0, 0, 1, 0,\n",
+       "         1, 1, 1, 1, 0, 1, 1, 1, 0, 1, 0, 1, 1, 1, 1, 1, 0, 1, 0, 1, 1, 0, 1, 1,\n",
+       "         0, 0, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 0, 1, 0, 0], device='cuda:0'),\n",
+       " tensor([  37,    7,  592,  ...,   29, 1145,    3], device='cuda:0'),\n",
+       " tensor([    0,   273,   442,   889,  1060,  1610,  1788,  2090,  2261,  2474,\n",
+       "          2834,  3005,  3210,  3507,  3601,  3871,  4230,  4279,  4418,  4685,\n",
+       "          5132,  5275,  5748,  6026,  6249,  6829,  7435,  7567,  7640,  7827,\n",
+       "          8068,  8224,  8333,  8493,  8671,  8965,  9134,  9257,  9473,  9864,\n",
+       "         10135, 10382, 10620, 10788, 10957, 11020, 11395, 11559, 11873, 11977,\n",
+       "         12377, 13530, 13651, 13800, 13973, 14113, 14568, 14668, 14914, 15100,\n",
+       "         15330, 15622, 15796, 16033], device='cuda:0'))"
       ]
      },
      "execution_count": 17,
@@ -1129,7 +1133,7 @@
     "        embd = self.Embed_Bag(text,offset)\n",
     "        return self.fc(embd)\n",
     "\n",
-    "model = TextClassifyModel(len(vocab),100)\n",
+    "model = TextClassifyModel(len(vocab),100).to(device)\n",
     "model"
    ]
   },
@@ -1178,8 +1182,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1----Train Loss:: 0.671937\n",
-      "Epoch 2----Train Loss:: 0.646893\n"
+      "Epoch 1----Train Loss:: 0.671038\n",
+      "Epoch 2----Train Loss:: 0.646020\n"
      ]
     }
    ],
@@ -1223,7 +1227,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
