--- a/text1.AE_PyTorch.ipynb
+++ b/text1.AE_PyTorch.ipynb
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using cpu device\n"
+      "Using cuda:0 device\n"
      ]
     }
    ],
@@ -18,11 +18,10 @@
     "import torch\n",
     "from torch import nn\n",
     "import numpy as np\n",
-    "from torchsummary import summary\n",
     "\n",
     "\n",
     "device = (\n",
-    "    \"cuda\"\n",
+    "    \"cuda:0\"\n",
     "    if torch.cuda.is_available()\n",
     "    else \"mps\"\n",
     "    if torch.backends.mps.is_available()\n",
@@ -126,7 +125,7 @@
     "\n",
     "embed_dim = 300\n",
     "vocab_size = len(vocab)\n",
-    "Emb2Class_model = Emb2Class(vocab_size, embed_dim)\n",
+    "Emb2Class_model = Emb2Class(vocab_size, embed_dim).to(device)\n",
     "Emb2Class_model"
    ]
   },
@@ -170,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "b27fec7a-0a60-4582-95bf-548b3fff66b3",
    "metadata": {},
    "outputs": [
@@ -178,23 +177,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch:1\t=====last batch loss:6.354733943939209\n",
-      "Epoch:2\t=====last batch loss:5.915564060211182\n",
-      "Epoch:3\t=====last batch loss:5.263095855712891\n",
-      "Epoch:4\t=====last batch loss:4.849503040313721\n",
-      "Epoch:5\t=====last batch loss:4.178357124328613\n"
+      "Epoch:1\t=====last batch loss:6.195950508117676\n",
+      "Epoch:2\t=====last batch loss:5.4163336753845215\n",
+      "Epoch:3\t=====last batch loss:5.043501853942871\n",
+      "Epoch:4\t=====last batch loss:4.313214302062988\n",
+      "Epoch:5\t=====last batch loss:3.695521593093872\n",
+      "Epoch:6\t=====last batch loss:3.0953471660614014\n",
+      "Epoch:7\t=====last batch loss:2.9020485877990723\n",
+      "Epoch:8\t=="
      ]
     }
    ],
    "source": [
-    "for epoch in range(5):\n",
+    "for epoch in range(20):\n",
     "    print(\"Epoch:{}\".format(epoch+1),end='\\t')\n",
     "    Emb2Class_train(test_dl_noLable, Emb2Class_model, Emb2Class_lossfn, Emb2Class_optimizer)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "916d1218-fe49-4930-8b3b-a94bf9e6f87e",
    "metadata": {},
    "outputs": [],
@@ -241,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "225f3236-7cc3-4c64-b794-3231010ede8d",
    "metadata": {},
    "outputs": [],
@@ -252,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "b7d74ee0-a984-4f26-a0a2-98ea3245c49b",
    "metadata": {},
    "outputs": [],
@@ -263,7 +265,7 @@
     "        self.rnn_cell = nn.RNNCell(embed_dim,hidden_unitE)\n",
     "        self.hidden_unitE = hidden_unitE\n",
     "    def forward(self,inputs):\n",
-    "        htE = torch.zeros((inputs.shape[1],self.hidden_unitE))  ## (batch_size,hidden_unitE)\n",
+    "        htE = torch.zeros((inputs.shape[1],self.hidden_unitE)).to(device)  ## (batch_size,hidden_unitE)\n",
     "        for word in inputs:\n",
     "            # if len(torch.nonzero(word-vocab['eos']))== 0:      ## when all words == vocab['eos']\n",
     "            #     break\n",
@@ -287,31 +289,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "81839809-b3d4-480d-88ad-90e6c9bdd2aa",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "RNN_AE_Net(\n",
-       "  (emb): Embedding(1110, 300)\n",
-       "  (rnnEncoder): RNN_encoder(\n",
-       "    (rnn_cell): RNNCell(300, 200)\n",
-       "  )\n",
-       "  (fc_E2D): Linear(in_features=200, out_features=200, bias=True)\n",
-       "  (rnnDecoder): RNN_decoder(\n",
-       "    (rnn_cell): RNNCell(300, 200)\n",
-       "    (fc): Linear(in_features=200, out_features=300, bias=True)\n",
-       "  )\n",
-       ")"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "class RNN_AE_Net(nn.Module):\n",
     "    def __init__(self, vocab_size, embed_dim, hidden_unitE, hidden_unitD):\n",
@@ -325,20 +306,20 @@
     "        x = self.rnnEncoder(emb)\n",
     "        x = self.fc_E2D(x)\n",
     "        x,htD = self.rnnDecoder(emb,x)\n",
-    "        return x,htD\n",
+    "        return x.to(device),htD.to(device)\n",
     "\n",
     "\n",
     "embed_dim = 300\n",
     "hidden_unit = 200\n",
     "vocab_size = len(vocab)\n",
     "\n",
-    "model = RNN_AE_Net(vocab_size, embed_dim, hidden_unit, hidden_unit)\n",
+    "model = RNN_AE_Net(vocab_size, embed_dim, hidden_unit, hidden_unit).to(device)\n",
     "model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "e4672e91-7e43-45cc-a657-904853ce7b52",
    "metadata": {},
    "outputs": [],
@@ -372,26 +353,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "0ff756e2-3492-4614-b015-220bb8cffd00",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch:1\t=====last batch loss:1.1256271600723267\n",
-      "Epoch:2\t=====last batch loss:1.1218613386154175\n",
-      "Epoch:3\t=====last batch loss:1.116965413093567\n",
-      "Epoch:4\t=====last batch loss:1.113127589225769\n",
-      "Epoch:5\t=====last batch loss:1.1077748537063599\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "for epoch in range(5):\n",
+    "for epoch in range(20):\n",
     "    print(\"Epoch:{}\".format(epoch+1),end='\\t')\n",
     "    train(test_dl_noLable, model, loss_fn, optimizer)"
    ]
@@ -416,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "72cb2221-bea5-47b4-a2db-8a6d26c80531",
    "metadata": {},
    "outputs": [],
@@ -427,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "69783c06-f963-4d6c-a215-71b97b9fee1a",
    "metadata": {},
    "outputs": [],
@@ -438,21 +407,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "efe76139-bc07-49ec-823a-6d15888a77b5",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'<sos> busy phillips put in one <unk> of a performance , both comedic and dramatic . erika christensen was good but busy <unk> the show . it was a nice <unk> after the <unk> , a movie starring busy , which <unk> all that great . if busy <unk> get a <unk> of any kind for this film it would be a <unk> . forget <unk> <unk> <unk> , see home room . <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> '"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "str = \"\"\n",
     "for ii in inputs[:,0].numpy():\n",
@@ -463,21 +421,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "ddb07a54-54af-483e-af4d-dcbaf3d15744",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'adult winkelman scene as mention philipps queen happening tragedy want ever looked on graduate heard <eos> little anyone happen grandfather big winkelman victor still mental each video no dead amazing my wake still couple colour off those deep trier ever guys unique golden eyes kills uncanny channels winkelman unique matter deep girls happening unique must setting up less computer busy boring tragedy girls whatever read tragedy unique unique colour worthy grade their camera subtle subtle subtle kind subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle subtle '"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "str = \"\"\n",
     "for ii in pred_out[:,0].numpy():\n",
@@ -496,63 +443,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "9898aebf-bbf7-41b2-a9c1-56fa83008972",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "796"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "ii"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "e76f5056-5f84-4ba0-ba25-0fec127d3d8d",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "vocab['<eos>']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "f043df4f-4970-41ba-9d3e-55e4ae427577",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'<eos>'"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "vocab.lookup_token(vocab['<eos>'])"
    ]
@@ -590,7 +504,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
